# codepedia

./: .gitignore
assembly/udemy-learn-assembly-for-atari/cleanmem/: cleanmem.asm
c++/basics/: a.out  variables.cpp
c/advanced/: array.c  pointers.c
c/asyncio/: epoll.c  poll.c  selec_test  select.c  select_test
c/udemy-ethical-hacking-malware/: backdoor.c
cpp/basics/: arithmetic.cpp  conditionals.cpp  functions.cpp  loops.cpp  vector_ops.cpp
cpp/coding-interview/: container_with_most_water_11.cpp
cpp/docker-clone/: Makefile  ccrun  main.cpp
cpp/roamer/: package.xml
cpp/ros_articubot/: README.md  my_map_serialize.data  my_may_save.pgm  my_may_save.yaml  run.sh
cpp/toy-jvm/: CMakeLists.txt  README.md  compile_commands.json  make_and_run.sh
go/arq-wrapper/: go.mod  main.go
go/ent/: go.mod  go.sum
go/messenger/: go.mod
go/redis/: go.mod
go/websocket-api-gateway/: go.mod
java/helloboot/: build.gradle.kts
java/rxjavaPrimer/: build.gradle.kts  settings.gradle.kts
java/streams/: settings.gradle.kts
javascript/basics/: app.js
kotlin/basics/: build.gradle.kts
python/projects/lab/: app.py  pyproject.toml
python/projects/lab/lab/: crop.py  remove_white_background.py
python/projects/yogiyo/: pyproject.toml
python/projects/yogiyo/yogiyo/restaurants/: models.py  urls.py  views.py
python/projects/yogiyo/yogiyo/restaurants/migrations/: 0001_initial.py
python/projects/yogiyo/yogiyo/yogiyo/: asgi.py  settings.py  urls.py  wsgi.py
rust/blog_os/: Cargo.toml
rust/pdf-parser/: Cargo.toml
vm/: README.md
vm/lc-3/: lc3.c
(+797 files in other folders)
